--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1>Hi, I'm <span class="name">Stephanie Oguocha</span>.</h1>
                 <h3>I'm a Frontend developer passionate about creating responsive and user-friendly interfaces.</h3>
                  <p> With experience in web design and development, I focus on building seamless experiences that help businesses and startups succeed.</p>
-                 <a href="#" class="top-link">
+                 <a href="#contact" class="top-link">
                     <p>WORK WITH ME <i class="fa-solid fa-arrow-right"></i> </p>
                  </a> 
             </div>
@@ -65,6 +65,29 @@
         
     </section>
 
+    <footer>
+        <h2> Reach out!</h2>
+
+        <div id="contact">
+            <div class="email">
+                <p>Stephanie Oguocha</p>
+                <a href="stephanieoguocha@gmail.com"> stephanieoguocha@gmail.com </a>
+                <!-- <a href="www.stephanie.com"> www.stephanie.com </a> -->
+            </div>
+
+            <div class="socials">
+            <p>Connect with me</p>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            </div>
+        </div>
+        <hr>
+        <p class="copyright">
+            <span class="copyright-symbol"> © </span> Stephanie Oguocha <span id="year"></span>
+        </p>
+    </footer>
 
 
     <script src="app.js"></script>
